<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btnShowNormalAlertDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="showAlertDialog"
        android:text="@string/btn_show_normal_alert_dialog" />

    <Button
        android:id="@+id/btnShowAlertDialogList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnShowNormalAlertDialog"
        android:onClick="showAlertDialog"
        android:text="@string/btn_show_alert_dialog_list" />

    <Button
        android:id="@+id/btnShowCustomAlertDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnShowAlertDialogList"
        android:onClick="showAlertDialog"
        android:text="@string/btn_show_custom_alert_dialog" />

</RelativeLayout>
